--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
 .board-box{
   height: 80px;
   width: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .box-1{
