--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,29 @@
-*{
+* {
   padding: 0px;
   margin: 0px;
 }
 
-.center{
+html{
+  height: 100%;
+}
+
+body{
+  height: 100%;
+  background-image: linear-gradient(rgb(0, 119, 255), rgb(103, 174, 255));
+  background-repeat: no-repeat;
+  border: solid;
+  border-color: rgba(255, 255, 255, 0);
+}
+
+.center {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.PlayerCard{
+.PlayerCard {
   width: 80%;
-  border: solid;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -21,10 +32,23 @@
   padding: 10px;
   border-width: thin;
   border-radius: 10px;
-  border-color: rgb(184, 184, 184);
+  background: linear-gradient(0.25turn, #ffffff, #ccffc0);
 }
 
-.EditButton{
+.PlayerCard:last-child{
+  background: linear-gradient(0.25turn, #ffffff, #ffdcc0);
+}
+
+.card-holder{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* margin-top: 30px;
+  margin-bottom: 30px; */
+}
+
+.EditButton {
   padding: 5px;
   height: 20px;
   width: 20px;
@@ -36,11 +60,121 @@
   border-radius: 1px;
 }
 
-.modalBody label{
+.modalBody label {
   margin-right: 20px;
 }
 
-.board-piece-selection{
+.board-piece-selection {
   height: 50px;
-  length: 50px;
+  width: 50px;
+  padding: 5px;
+}
+
+.active {
+  color: green;
+  border: solid;
+  border-width: thin;
+  border-radius: 10px;
+  height: 50px;
+  width: 50px;
+}
+
+.cardIcon {
+  width: 20px;
+  height: 20px;
+}
+
+.NameAndPiece {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.NameAndPiece img {
+  margin-left: 10px;
+}
+
+.disabled {
+  filter: blur(1px);
+  filter: grayscale();
+  pointer-events: none;
+}
+
+.Start{
+  height: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.start-button{
+  border-width: thin;
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 20px;
+  text-decoration: none;
+  background-color: white;
+  box-shadow: 1px 1px 3px 1px;
+}
+
+.btn-pink{
+  color: #fdc0ff;
+}
+
+.btn-green{
+  color: #ccffc0
+}
+
+.btn-red{
+  color: #ffdcc0
+}
+
+.player-number{
+  margin-right: 12px;
+}
+
+.title{
+  margin-top: 20px;
+}
+
+.bold{
+  font-weight:500
+}
+
+#Popup{
+  position: absolute;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(172, 172, 172, 0.418);
+  top: 0px;
+  left: 0px;
+  z-index: 10;
+  transition: 0.5s;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#popup-h1{
+  color: rgba(0, 0, 0, 0);
+  transition: 1s;
+  margin-bottom: 20px;
+}
+
+#Popup button{
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.menu_button{
+  border: solid;
+  border-width: thin;
+  border-radius: 10px;
+  text-decoration: none;
+  color: white;
+  padding: 8px;
 }
