--- a/src/Board.css
+++ b/src/Board.css
@@ -3,15 +3,17 @@
     grid-template-columns: auto auto auto;
     justify-content: center;
     width: 100%;
+    position: relative;
   }
   
   .board-box{
-    height: 80px;
-    width: 80px;
+    height: 110px;
+    width: 110px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: white;
   }
   
   .box-1{
@@ -49,3 +51,49 @@
   .box-9{
     border-left: solid;
   }
+
+  .piece-placeholder{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: 50px;
+    background-repeat: no-repeat;
+  }
+
+
+/* -------------- LINE -------------------- */
+.line-row-container{
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.line-sub-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-width: thin;
+  width: 100%;
+  height: 33.33%;
+}
+
+.line{
+  width: 280px;
+  border: none;
+  border-width: thin;
+}
+
+/* ----------------- Bigger Sizes ---------------- */
+
+@media all and (min-width: 951px) {
+  .board-box{
+    height: 180px;
+    width: 180px;
+  }
+
+  .piece-placeholder{
+    background-size: 90px;
+  }
+}
